[package]
name = "luabster"
version = "0.1.0"
edition = "2021"
links = "sig"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "*"

[dependencies]
home = "*"
hostname = "*"
tempfile = "*"
rlua = "*"
crossterm = "*"
itertools = "*"
strsim = "*"
colored = "2.1.0"
shellexpand = "*"
